# 05_hw

./: CMakeLists.txt  Makefile  main.c  stack.c  stack.h
.github/workflows/: ci.yml
benchmarks/: bench_stack.c
tests/: test_stack.c
